# signoz-tracing

./: .editorconfig  .env.dev  .gitignore  Justfile  Makefile  README.md  compose.yml
fastapi-app/: .dockerignore  Makefile
fastapi-app/api/: Dockerfile  Makefile
fastapi-app/worker/: Dockerfile
fastapi-app/worker/tasks/: __init__.py  compute.py
httpx-test/: main.py  pyproject.toml
locust/: pyproject.toml
rabbitmq/: compose.yml
services/: Justfile  Makefile  compose.yml
services/computer-svc/api/: Dockerfile  app.py  pyproject.toml
services/computer-svc/api/routers/: compute.py
services/computer-svc/worker/: Dockerfile  Makefile  celery_app.py  config.py  pyproject.toml
services/computer-svc/worker/tasks/: compute.py
services/share-libs/: README.md
services/share-libs/astrotel/: README.md  pyproject.toml
services/share-libs/astrotel/src/astrotel/: base.py  config.py
services/share-libs/otel-tracing/: main.py  pyproject.toml
services/share-libs/otel-tracing/src/otel-tracing/: base.py
services/share-libs/otel_tracing/: Makefile  pyproject.toml
services/share-libs/otel_tracing/src/otel_tracing/: base.py  fastapi.py
