[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncer>=0.0.8",
    "celery>=5.5.3",
    "fastapi>=0.116.1",
    "otel-tracing",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
otel-tracing = { path = "../../share-libs/otel_tracing" }
